--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <body class="body">
 
         <header>
-            <span>© Mamedov Artur 2025</span>
+            <span>© Mamedov Artur 2025  |  <a 
+                href="https://github.com/tripchanski"
+                target="_blank"
+                rel="noopener noreferrer"
+                >My Github Profile</a></span>
                 <div class="btns">
                     <button class="btn" id="light-dark-btn" data-target="theme">
                         <svg width="43" height="112" viewBox="0 0 43 112" fill="none" xmlns="http://www.w3.org/2000/svg"  class="theme-icon">
@@ -477,9 +481,6 @@
                                             </div>
                                         </div>
                                         <div class="card-buttons">
-                                            <!-- <button class="btn-more">
-                                                More...
-                                            </button> -->
                                             <a
                                                 href="https://www.figma.com/proto/K7NYvGuL8fkVOagFrkPZLw/Landing?node-id=2-3&t=05Jsx0NBg1tINr5O-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=2%3A3"
                                                 target="_blank"
@@ -503,47 +504,6 @@
                     </div>
                 </div>
             </div>
-
-
-            <!-- <div class="frame" id="contacts">
-                <div class="content">
-                    <div class="contacts">
-                        <div class="contact">
-                            <a
-                                href="https://t.me/Mamedov_Artur"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                ><img
-                                    src="img/Telegram.svg"
-                                    alt="Telegram"
-                                />@Mamedov_Artur</a
-                            >
-                        </div>
-                        <div class="contact">
-                            <a
-                                href="https://github.com/Mamedov-Artur"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                ><img
-                                    src="img/Github.svg"
-                                    alt="Github"
-                                />Mamedov-Artur</a
-                            >
-                        </div>
-                        <div class="contact">
-                            <a
-                                href="https://www.linkedin.com/in/artur-mamedov-428299279/"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                ><img
-                                    src="img/Linkedin.svg"
-                                    alt="LinkedIN"
-                                />Artur Mamedov</a
-                            >
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
 
 
@@ -563,9 +523,6 @@
                     <path d="M13 7L11.8845 4.76892C11.5634 4.1268 11.4029 3.80573 11.1634 3.57116C10.9516 3.36373 10.6963 3.20597 10.4161 3.10931C10.0992 3 9.74021 3 9.02229 3H5.2C4.0799 3 3.51984 3 3.09202 3.21799C2.71569 3.40973 2.40973 3.71569 2.21799 4.09202C2 4.51984 2 5.0799 2 6.2V7M2 7H17.2C18.8802 7 19.7202 7 20.362 7.32698C20.9265 7.6146 21.3854 8.07354 21.673 8.63803C22 9.27976 22 10.1198 22 11.8V16.2C22 17.8802 22 18.7202 21.673 19.362C21.3854 19.9265 20.9265 20.3854 20.362 20.673C19.7202 21 18.8802 21 17.2 21H6.8C5.11984 21 4.27976 21 3.63803 20.673C3.07354 20.3854 2.6146 19.9265 2.32698 19.362C2 18.7202 2 17.8802 2 16.2V7Z" stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>Projects
             </button>
-            <!-- <button class="btn" id="contacts-btn" data-target="contacts">
-                <img src="img/Phone.svg" alt="Contacts" />Contacts
-            </button> -->
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
