--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
         <div class="frames-container">
             <div class="frame active theme-secondary" id="welcome">
                 <div class="content">
-                    <h1 class="text" id="welcome-text-1">You’re Welcome.</h1>
+                    <h1 class="text" id="welcome-text-1">Hello Everyone!</h1>
                     <h1 class="text hidden" id="welcome-text-2">
-                        I’m Mamedov Artur
+                        I’m Mamedov Artur.
                     </h1>
                 </div>
             </div>
