--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,7 @@
     </head>
     <body class="body theme-text">
         <canvas id="background-canvas"></canvas>
+        <canvas id="snow-canvas"></canvas>
         <div id="game-counter">⭐ 0</div>
 
         <header>
